--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
         </form>
      </div>
      <div class="w-full flex flex-col justify-center items-center mb-6">
-        <a href="home.html" class="w-full flex justify-center"><button style="background: linear-gradient(270deg, #7B91FF 0%, #95BEFF 100%);
+        <a href="goals.html" class="w-full flex justify-center"><button style="background: linear-gradient(270deg, #7B91FF 0%, #95BEFF 100%);
             " class="w-11/12 h-12 rounded-2xl font-semibold text-white text-md">Sign In</button></a>
         <div class="flex flex-row items-center w-full justify-center mt-6 mb-6">
             <div class="border border-gray-300 w-2/5"></div>
