--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body class="flex justify-center bg-sky-100">
     <div
-      class="container w-96 h-screen bg-white relative flex justify-around items-center flex-col"
+      class="w-full h-screen bg-white relative flex justify-around items-center flex-col"
     >
       <a href="signup.html" class="right-6 mr-6 underline underline-offset-4 self-end" style="color: #9fb2ff"
         ><p>
           Skip
         </p></a
       >
-      <img src="images/first.png" class="h-72 w-5/6" />
+      <img src="images/first.png" class="h-72 w-5/6 md:w-1/3 md:h-96" />
       <div class="w-11/12 flex flex-col">
         <h3 class="font-bold text-xl">Track Your Goal</h3>
         <p class="text-base mt-4" style="color: #787878">
