--- a/signin.html
+++ b/signin.html
@@ -8,13 +8,13 @@
 </head>
 <body class="flex justify-center bg-sky-100">
     <div
-      class="container w-96 h-screen bg-white flex justify-between items-start flex-col"
+      class="w-full h-screen bg-white flex justify-between items-start flex-col"
     >
      <div class="flex flex-col w-full">
         <h3 class="text-xl font-bold ml-4 mt-6">Welcome Back</h3>  
         <form class="flex flex-col p-4 mt-6 gap-6 text-sm w-full font-semibold">
-            <input type="email" placeholder="Email" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
-            <input type="password" placeholder="Password" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="email" placeholder="Email" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="password" placeholder="Password" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
             <div class="flex items-center">
                 <p style="color:#7F7F7F" class="font-normal"> <a href="#" class="underline underline-offset-4 self-end"
                     >Forgot your password?</a></p>
