--- a/signup.html
+++ b/signup.html
@@ -8,15 +8,15 @@
 </head>
 <body class="flex justify-center bg-sky-100">
     <div
-      class="container w-96 h-screen bg-white flex justify-between items-start flex-col"
+      class="w-full h-screen bg-white flex justify-between items-start flex-col"
     >
      <div class="flex flex-col w-full">
         <h3 class="text-xl font-bold ml-4 mt-6">Create an Account</h3>  
         <form class="flex flex-col p-4 mt-6 gap-6 text-sm w-full font-semibold">
-            <input type="text" placeholder="First Name" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
-            <input type="text" placeholder="Last Name" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
-            <input type="email" placeholder="Email" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
-            <input type="password" placeholder="Password" class="w-full h-12 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="text" placeholder="First Name" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="text" placeholder="Last Name" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="email" placeholder="Email" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
+            <input type="password" placeholder="Password" class="w-full h-14 rounded-xl p-5" style="background: #F1F1F1">
             <div class="flex items-center">
                 <input type="checkbox" name="agree" id="agree" value="agree" class="mr-2 w-4 h-4">
                 <label for="agree" style="color:#7F7F7F" class="font-normal">By proceeding, I agree to all <a href="#" class="underline underline-offset-4 self-end" style="color: #9fb2ff"
